// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popup/App authorized 1`] = `
<div>
  <div>
    Header
  </div>
  <div>
    List
  </div>
  <div
    className="component"
  >
    <span>
      popup.donation.text
    </span>
    <div
      className="btn"
    >
      <button
        className="secondary"
        onClick={[Function]}
      >
        <span>
          popup.donation.donateBtn
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`popup/App not authorized 1`] = `
<div
  className="container"
>
  <p>
    <span>
      popup.notAuthorized.title
    </span>
  </p>
  <p>
    <span>
      popup.notAuthorized.subTitle
    </span>
  </p>
  <div
    className="btnContainer"
  >
    <button
      className="primary"
      onClick={[Function]}
    >
      <span>
        popup.notAuthorized.btnText
      </span>
    </button>
  </div>
</div>
`;
